infra/github/prod/ingress/api-stripprefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
  namespace: simon-prod
spec:
  stripPrefix:
    prefixes:
      - /api
