infra/github/prod/ingress/api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: simon-prod-api-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: simon-prod.uksouth.cloudapp.azure.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway-client-service
            port:
              number: 3003
